# INFOMGP-Practical1

./: .gitignore  CMakeLists.txt  README.md  auxfunctions.h  ccd.c  ccd.h  list.h  main.cpp  mpr.c  scene.h  scene_old.h  simplex.h  support.h  vec3.h  volInt.h
cmake/: FindLIBIGL.cmake
data/: box_tri.mesh  box_tri.off  box_tri_bigger.off  cube_tri.off  cylinder.mesh  cylinder.off  cylinder_simplified.off  ellipsoid.mesh  ellipsoid.off  long-octahedron.mesh  long-octahedron.off  mixedscene.txt  octahedron.mesh  octahedron.off  singletet.txt  stressscene.txt  tetrahedron.mesh  tetrahedron.off  tetscene.txt  towerscene.txt
demos/: Practical1_bin  infomgp-practical1_bin  practical1_bin  readme.txt
